--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,15 @@
-<form action="/artist-search" method="get">
-    <input type="text" id="artistName" name="artistName" placeholder="Artist name">
-    <button>Search for an Artist</button>
-</form>
+<div class="main">
+    <style>
+        body {
+            background-image: url("images/spotify-background.jpeg");
+            background-repeat: no-repeat;
+            background-position: right top;
+            background-size: cover;
+        }
+    </style>
+
+    <form action="/artist-search" method="get">
+        <input type="text" id="artistName" name="artistName" placeholder="Artist name">
+        <button>Search for an Artist</button>
+    </form>
+</div>
