--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -1,8 +1,10 @@
 <div class="albumCard">
     {{#each items }}
-    <img src="{{this.images.0.url}}">
-    <h2> {{this.name}} </h2>
-    <a href="/tracks/{{this.id}}"> View Tracks </a>
+    <div>
+        <img src="{{this.images.0.url}}">
+        <h2> {{this.name}} </h2>
+        <a href="/tracks/{{this.id}}"> View Tracks </a>
+    </div>
     {{/each}}
 
 </div>
